Replace macro with literal for path to collectd-ceilometer-plugin.

--- a/templates/collectd.conf.erb
+++ b/templates/collectd.conf.erb
@@ -3,7 +3,7 @@
 </LoadPlugin>
 
 <Plugin python>
-    ModulePath "$INSTALL_HOME/collectd-ceilometer-plugin"
+    ModulePath "/etc/collectd/collectd-ceilometer-plugin"
     LogTraces true
     Interactive false
     Import "collectd_ceilometer.plugin"
