Change public_url to auth_url.

--- a/templates/collectd.conf.erb
+++ b/templates/collectd.conf.erb
@@ -17,7 +17,7 @@
         BATCH_SIZE 3
 
         # Service endpoint addresses
-        OS_AUTH_URL "<%=@public_url-%>"
+        OS_AUTH_URL "<%=@auth_url-%>"
 
         # Ceilometer address
         #CEILOMETER_ENDPOINT
