--- a/templates/collectd.conf.erb
+++ b/templates/collectd.conf.erb
@@ -6,21 +6,20 @@
     ModulePath "/opt/collectd-ceilometer/collectd-ceilometer-plugin"
     LogTraces true
     Interactive false
-    Import "collectd_ceilometer.plugin"
+    Import "collectd_ceilometer.gnocchi.plugin"
 
-    <Module "collectd_ceilometer.plugin">
+    <Module "collectd_ceilometer.gnocchiplugin">
 
-        # Verbosity 1|0
-        #VERBOSE 0
+        # Verbosity True|False
+        #VERBOSE 1
 
         # Batch size
-        BATCH_SIZE 3
+        BATCH_SIZE "1"
 
         # Service endpoint addresses
         OS_AUTH_URL "<%=@auth_uri-%>"
 
         # Ceilometer address
-        #CEILOMETER_ENDPOINT
         CEILOMETER_URL_TYPE "internalURL"
 
         # Ceilometer timeout in ms
@@ -29,8 +28,10 @@
         # # Ceilometer user creds
         OS_USERNAME "<%=@collectd_username-%>"
         OS_PASSWORD "<%=@collectd_password-%>"
-        OS_TENANT_NAME "services"
+        OS_TENANT_NAME "service"
 
+      <UNITS>
+      </UNITS>
     </Module>
 </Plugin>
 
