Add missing period in gnocchi.plugin. Verbose = True.

--- a/templates/collectd.conf.erb
+++ b/templates/collectd.conf.erb
@@ -8,10 +8,10 @@
     Interactive false
     Import "collectd_ceilometer.gnocchi.plugin"
 
-    <Module "collectd_ceilometer.gnocchiplugin">
+    <Module "collectd_ceilometer.gnocchi.plugin">
 
         # Verbosity True|False
-        #VERBOSE 1
+        VERBOSE True
 
         # Batch size
         BATCH_SIZE "1"
