--- a/templates/logfile.conf.erb
+++ b/templates/logfile.conf.erb
@@ -1,7 +1,7 @@
 LoadPlugin "logfile"
 <Plugin "logfile">
-  LogLevel "info"
-  File "/opt/stack/screen/collectd.log"
+  LogLevel "debug"
+  File "/opt/stack/collectd.log"
   Timestamp true
 </Plugin>
 
