Remove load plugin statements for hugepages, mcelog, intel_rdt, ovs_events.

--- a/templates/collectd.conf.erb
+++ b/templates/collectd.conf.erb
@@ -128,8 +128,8 @@ LoadPlugin cpu
 #LoadPlugin gps
 ##LoadPlugin grpc
 #LoadPlugin hddtemp
-LoadPlugin hugepages
-LoadPlugin intel_rdt
+#LoadPlugin hugepages
+#LoadPlugin intel_rdt
 LoadPlugin interface
 #LoadPlugin ipc
 #LoadPlugin ipmi
@@ -143,7 +143,7 @@ LoadPlugin load
 #LoadPlugin lvm
 #LoadPlugin madwifi
 #LoadPlugin mbmon
-LoadPlugin mcelog
+#LoadPlugin mcelog
 #LoadPlugin md
 #LoadPlugin memcachec
 #LoadPlugin memcached
@@ -169,7 +169,7 @@ LoadPlugin memory
 #LoadPlugin openldap
 #LoadPlugin openvpn
 ##LoadPlugin oracle
-LoadPlugin ovs_events
+#LoadPlugin ovs_events
 #LoadPlugin ovs_stats
 #LoadPlugin perl
 #LoadPlugin pinba
