Add "" around path to .conf files.

--- a/templates/collectd.conf.erb
+++ b/templates/collectd.conf.erb
@@ -1708,7 +1708,7 @@ LoadPlugin rrdtool
 #  </Host>
 #</Plugin>
 
-<Include /etc/collectd/collectd.conf.d>
+<Include "/etc/collectd/collectd.conf.d">
         Filter "*.conf"
 </Include>
 
