--- a/templates/collectd-ceil.conf.erb
+++ b/templates/collectd-ceil.conf.erb
@@ -28,7 +28,7 @@
         # # Ceilometer user creds
         OS_USERNAME "<%=@collectd_username-%>"
         OS_PASSWORD "<%=@collectd_password-%>"
-        OS_TENANT_NAME "service"
+        OS_TENANT_NAME "services"
 
       <UNITS>
       </UNITS>
