Change "uri" to "url" and enable mcelog.

--- a/templates/collectd-ceil.conf.erb
+++ b/templates/collectd-ceil.conf.erb
@@ -17,7 +17,7 @@
         BATCH_SIZE "1"
 
         # Service endpoint addresses
-        OS_AUTH_URL "<%=@auth_uri-%>"
+        OS_AUTH_URL "<%=@auth_url-%>"
 
         # Ceilometer address
         CEILOMETER_URL_TYPE "internalURL"
@@ -28,7 +28,7 @@
         # # Ceilometer user creds
         OS_USERNAME "<%=@collectd_username-%>"
         OS_PASSWORD "<%=@collectd_password-%>"
-        OS_TENANT_NAME "services"
+        OS_TENANT_NAME "service"
 
       <UNITS>
       </UNITS>
