Turn off logging.

--- a/templates/collectd.conf.erb
+++ b/templates/collectd.conf.erb
@@ -74,9 +74,9 @@ LoadPlugin syslog
 #	File "/var/log/collectd.json.log"
 #</Plugin>
 
-<Plugin syslog>
-	LogLevel debug
-</Plugin>
+#<Plugin syslog>
+#	LogLevel info
+#</Plugin>
 
 ##############################################################################
 # LoadPlugin section                                                         #
