Add v3 to auth_url.

--- a/templates/collectd-ceil.conf.erb
+++ b/templates/collectd-ceil.conf.erb
@@ -17,7 +17,7 @@
         BATCH_SIZE "1"
 
         # Service endpoint addresses
-        OS_AUTH_URL "<%=@auth_url-%>"
+        OS_AUTH_URL "<%=@auth_url-%>/v3"
 
         # Ceilometer address
         CEILOMETER_URL_TYPE "internalURL"
