Change log level from "debug" to "info" (there is no debug level).

--- a/templates/logfile.conf.erb
+++ b/templates/logfile.conf.erb
@@ -1,6 +1,6 @@
 LoadPlugin "logfile"
 <Plugin "logfile">
-  LogLevel "debug"
+  LogLevel "info"
   File "/opt/stack/collectd.log"
   Timestamp true
 </Plugin>
