Load the python plugin.

--- a/templates/collectd.conf.erb
+++ b/templates/collectd.conf.erb
@@ -178,7 +178,7 @@ LoadPlugin memory
 #LoadPlugin powerdns
 #LoadPlugin processes
 #LoadPlugin protocols
-#LoadPlugin python
+LoadPlugin python
 #LoadPlugin redis
 ##LoadPlugin routeros
 #LoadPlugin rrdcached
