Comment out last line of rrdtool plugin load section.

--- a/templates/collectd.conf.erb
+++ b/templates/collectd.conf.erb
@@ -1208,7 +1208,7 @@ LoadPlugin python
 #	CacheTimeout 120
 #	CacheFlush   900
 #	WritesPerSecond 50
-</Plugin>
+#</Plugin>
 
 #<Plugin sensors>
 #	SensorConfigFile "/etc/sensors.conf"
