Set Verbosity to false, timeout = 1 sec

--- a/templates/aodh.conf.erb
+++ b/templates/aodh.conf.erb
@@ -27,7 +27,7 @@
     <Module "collectd_ceilometer.aodh.plugin">
 
         # Verbosity True|False
-        VERBOSE True
+        VERBOSE False
 
         # Service endpoint addresses
 
@@ -39,7 +39,7 @@
 
         # Ceilometer timeout in ms
 
-        #CEILOMETER_TIMEOUT "1000"
+        CEILOMETER_TIMEOUT "1000"
 
 
         # # Ceilometer user creds
