Rename collectd-ceil to collectd-gnocchi Reduce log level to warning Add settings to mcelog-client

--- a/templates/logfile.conf.erb
+++ b/templates/logfile.conf.erb
@@ -14,7 +14,7 @@
 
 LoadPlugin "logfile"
 <Plugin "logfile">
-  LogLevel "info"
+  LogLevel "warning"
   File "/opt/stack/collectd.log"
   Timestamp true
 </Plugin>
